added favicon. Modified CSS code. added content to html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
   <title>My Portfolio</title>
   <!-- meta -->
   <meta charset="utf-8" />
@@ -10,16 +10,43 @@
   <!-- mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
+
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Trocchi|Zilla+Slab" rel="stylesheet">
+
   <!-- scripts -->
   <script type="text/javascript" src="assets/js/app.js"></script>
   <!-- favicon -->
-  <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
-</head>
-<body>
-  <div id="page-wrapper">
-    <h1>My Personal Page!</h1>
-  </div>
-</body>
+  <link rel="icon" type="image/png" href="assets/imgs/favicon-blossom.png">
+  </head>
+  <body>
+    <div id="page-wrapper">
+      <header>
+        <h1>Portfolio of Joanne Cabling</h1>
+          <nav>
+              <ul>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Web Development</a></li>
+                  <li><a href="#">Graphic Design</a></li>
+                  <li><a href="#">Contact</a></li>
+              </ul>
+          </nav>
+      </header>
+      <main>
+        <div id="col1">
+          <h2>About</h2>
+          <p>Vegan paleo hell of ut fingerstache cloud bread, intelligentsia YOLO stumptown eiusmod. Disrupt church-key green juice, poutine ennui tumeric succulents activated charcoal. Lomo cornhole irony sint, thundercats ramps est beard gastropub. Culpa meggings venmo gentrify in activated charcoal cillum pitchfork offal hoodie artisan edison bulb. </p>
+      </div>
+      <div id="col2">
+          <h2>Web Development</h2>
+          <p>Vegan paleo hell of ut fingerstache cloud bread, intelligentsia YOLO stumptown eiusmod. Disrupt church-key green juice, poutine ennui tumeric succulents activated charcoal. Lomo cornhole irony sint, thundercats ramps est beard gastropub. Culpa meggings venmo gentrify in activated charcoal cillum pitchfork offal hoodie artisan edison bulb. </p>
+      </div>
+      <div id="col3">
+        <h2>Graphic Design</h2>
+        <p>Vegan paleo hell of ut fingerstache cloud bread, intelligentsia YOLO stumptown eiusmod. Disrupt church-key green juice, poutine ennui tumeric succulents activated charcoal. Lomo cornhole irony sint, thundercats ramps est beard gastropub. Culpa meggings venmo gentrify in activated charcoal cillum pitchfork offal hoodie artisan edison bulb. </p>
+      </div>
+      </main>
+    </div>
+  </body>
 </html>
