--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
               <a href="#my-work">MY WORK</a>
             </li>
             <li><a href="#contact">CONTACT</a></li>
+            <li>
+              <a href="assets/JCablingResumeSept2017.pdf">MY RESUME</a>
+            </li>
         </ul>
     </nav>
     <!-- Header -->
