--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </li>
             <li><a href="#contact">CONTACT</a></li>
             <li>
-              <a href="assets/JCablingResumeSept2017.pdf">MY RESUME</a>
+              <a href="assets/JCablingResumeSept2017.pdf" target="_blank">MY RESUME</a>
             </li>
         </ul>
     </nav>
