changed ponder link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </li>
             <li><a href="#contact">CONTACT</a></li>
             <li>
-              <a href="assets/JCablingResumeSept2017.pdf" target="_blank">MY RESUME</a>
+              <a href="assets/JCablingResumeDec2017.pdf" target="_blank">MY RESUME</a>
             </li>
         </ul>
     </nav>
@@ -97,7 +97,7 @@
                 </p>
                 </div>
                 <div class="card-action">
-                <a href="http://ponder.ca/" target="_blank">Link</a>
+                <a href="http://ponder-blog.herokuapp.com/" target="_blank">Link</a>
                 </div>
               </div>
             </div>
